[fixed layout issue #4]

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -327,10 +327,11 @@ body {
   }
 
   .blur {
-    background: #00000090;
+    background: #00000080;
     backdrop-filter: blur(10px) saturate(180%) !important;
     -webkit-backdrop-filter: blur(16px) saturate(180%) !important;
     border: 1px solid rgba(255, 255, 255, 0.18);
+    color: #fff;
   }
 
 
